Tune application memory usage